33

* #2196: Improve the download of big documents to the clipboard.

32

* #2268 Allow removing downloads from the clipboard while in progress. (tomeu)

31

* Fix stop button icon. (marco)

30

* Add macedonian translation.

29

* #2718: Make the library the browser homepage. (marco)

28

* #1996: Rename to "Browse". (marco)

27

* Make it startup again. (marco)

26

* Add brazilian translation. (DiegoZacarao)

25

* Arabian translation